<resources>
    <string name="app_name">Shopply</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hello">Hello</string>
    <string name="title_notification">Hello 👋 It\'s Shopply</string>
    <string name="message_notification">Shall we go shopping today? 👀</string>
    <string name="what">What are we buying today?</string>
    <string name="search">Search list</string>
    <string name="my_lists">My lists</string>
    <string name="add_new_list">Add new list</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="enter_name">Enter name</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="dialog_toast">Please enter all the information</string>
    <string name="edit_list">Edit list</string>
    <string name="add_new_item">Add new item</string>
    <string name="count">1</string>
    <string name="delete_checked">Delete checked</string>
    <string name="clean_list">Clean list</string>
    <string name="sort_by">Sort by</string>
    <string name="settings">Settings</string>
    <string name="general">General</string>
    <string name="language">Language</string>
    <string name="language_code">en</string>
    <string name="notification">Notifications</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="about">About</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="help">Help</string>
    <string name="empty_main_text">Let\'s plan your shopping!</string>
    <string name="click_button_below">Click the button below to get started</string>
    <string name="empty_main_item_text">What do you need to buy?</string>
    <string name="eng">en</string>
    <string name="uk">uk</string>
    <string name="ru">ru</string>
    <string name="deleted_item">Deleted: %1$s</string>
    <string name="undo">Undo</string>
    <string name="name">Name</string>
    <string name="bought">Bought</string>
    <string name="dollar">$</string>
    <string name="count_item">%1$.2f</string>
    <string name="price_item">Price: %1$.2f$</string>
    <string name="total_item">Total: %1$.2f$</string>
    <string name="total">Total</string>
    <string name="total_price">%1$.2f$</string>
    <string name="edit_item">Edit item</string>
</resources>