<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/sort_by"
        android:title="@string/sort_by"
        android:icon="@drawable/ic_sort">

        <menu>

            <item
                android:id="@+id/sort_by_name"
                android:title="@string/name" />

            <item
                android:id="@+id/sort_by_bought"
                android:title="@string/bought" />

        </menu>

    </item>

    <item
        android:id="@+id/delete_checked_items"
        android:title="@string/delete_checked"
        android:icon="@drawable/ic_delete"/>

    <item
        android:id="@+id/clean_items_list"
        android:title="@string/clean_list"
        android:icon="@drawable/ic_close"/>

</menu>