<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".presentation.CategoryListFragment">


    <TextView
        android:id="@+id/what_text"
        style="@style/WhatText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/what"
        android:layout_marginLeft="@dimen/left_right_padding"
        android:layout_marginTop="@dimen/margin_top"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/menu_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:src="@drawable/ic_menu"
        android:padding="1dp"
        android:layout_marginRight="@dimen/left_right_padding"
        android:layout_marginTop="@dimen/margin_top"
        app:layout_constraintBottom_toBottomOf="@+id/what_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/search_edit_text"
        style="@style/SearchText"
        android:layout_width="match_parent"
        android:layout_height="@dimen/search_height"
        android:layout_marginTop="@dimen/search_margin_top"
        android:background="@drawable/search"
        android:drawableLeft="@drawable/ic_search"
        android:drawablePadding="@dimen/search_text_margin"
        android:hint="@string/search"
        android:textCursorDrawable="@null"
        android:layout_marginLeft="@dimen/left_right_padding"
        android:layout_marginRight="@dimen/left_right_padding"
        app:layout_constraintTop_toBottomOf="@+id/what_text" />

    <TextView
        android:id="@+id/textView"
        style="@style/MyListsText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_max"
        android:text="@string/my_lists"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginLeft="@dimen/left_right_padding"
        app:layout_constraintTop_toBottomOf="@+id/search_edit_text" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginLeft="@dimen/left_right_padding"
        android:layout_marginTop="@dimen/margin_recycler"
        android:layout_marginRight="@dimen/left_right_padding"
        android:layout_marginBottom="@dimen/margin_recycler"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toTopOf="@+id/add_new_list_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/empty_list_main_text"
        style="@style/ItemTitleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/empty_main_text"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/add_new_list_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/search_edit_text" />

    <TextView
        android:id="@+id/empty_list_text"
        style="@style/EmptyText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_between_edit_text"
        android:text="@string/click_button_below"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/empty_list_main_text" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/add_new_list_button"
        style="@style/Button.MyTheme"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_height"
        android:layout_marginBottom="@dimen/margin_max"
        android:text="@string/add_new_list"
        android:layout_marginLeft="@dimen/left_right_padding"
        android:layout_marginRight="@dimen/left_right_padding"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>