<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.SettingsFragment"
    android:paddingLeft="24dp"
    android:paddingRight="24dp"
    android:paddingTop="20dp">

    <ImageButton
        android:id="@+id/back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:src="@drawable/ic_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/category_name_text"
        style="@style/WhatText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/general_text"
        style="@style/SettingParagraphText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/general"
        android:layout_marginTop="@dimen/margin_max"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/back_button" />

    <RelativeLayout
        android:id="@+id/language_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_mid"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/general_text">

        <ImageView
            android:id="@+id/icon_language"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_world" />

        <TextView
            style="@style/ItemTitleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/margin_between_edit_text"
            android:layout_toEndOf="@+id/icon_language"
            android:text="@string/language" />

        <TextView
            android:id="@+id/language_choice"
            style="@style/ItemTitleLanguageText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:text="@string/english" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/notification_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_settings_items"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/language_item">

        <ImageView
            android:id="@+id/icon_notification"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_bell" />

        <TextView
            style="@style/ItemTitleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/margin_between_edit_text"
            android:layout_toEndOf="@+id/icon_notification"
            android:text="@string/notification" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/notification_choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:checked="true"
            android:minHeight="0dp"
            android:thumb="@drawable/trumb"
            app:track="@drawable/track" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/theme_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="@dimen/margin_settings_items"
        app:layout_constraintTop_toBottomOf="@+id/notification_item">

        <ImageView
            android:id="@+id/icon_theme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_moon" />

        <TextView
            style="@style/ItemTitleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/margin_between_edit_text"
            android:layout_toEndOf="@+id/icon_theme"
            android:text="@string/dark_mode" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/theme_choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:checked="false"
            android:minHeight="0dp"
            android:thumb="@drawable/trumb"
            app:track="@drawable/track" />

    </RelativeLayout>
    
    <TextView
        android:id="@+id/about_text"
        style="@style/SettingParagraphText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about"
        android:layout_marginTop="@dimen/margin_max"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/theme_item" />

    <RelativeLayout
        android:id="@+id/privacy_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_settings_items"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/about_text">

        <ImageView
            android:id="@+id/icon_privacy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_lock" />

        <TextView
            android:id="@+id/privacy_policy"
            style="@style/ItemTitleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/margin_between_edit_text"
            android:layout_toEndOf="@+id/icon_privacy"
            android:text="@string/privacy_policy" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/help_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_settings_items"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/privacy_item">

        <ImageView
            android:id="@+id/icon_help"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_information" />

        <TextView
            android:id="@+id/help"
            style="@style/ItemTitleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/margin_between_edit_text"
            android:layout_toEndOf="@+id/icon_help"
            android:text="@string/help" />

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>