<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.sheet_dialog.AddNewListSheet">

    <TextView
        android:id="@+id/title_text"
        style="@style/DialogMainText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_max"
        android:text="@string/add_new_list"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/emoji_edit_text"
        style="@style/SearchText"
        android:layout_width="@dimen/dialog_edit_text_width"
        android:layout_height="@dimen/dialog_edit_text_height"
        android:background="@drawable/search"
        android:hint="@string/emoji"
        android:textAlignment="center"
        android:layout_marginTop="@dimen/margin_mid"
        android:layout_marginLeft="@dimen/left_right_padding"
        android:layout_marginRight="@dimen/left_right_padding"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_text" />

    <EditText
        android:id="@+id/name_edit_text"
        style="@style/EditText"
        android:layout_width="0dp"
        android:layout_height="@dimen/dialog_edit_text_height"
        android:layout_marginTop="@dimen/margin_mid"
        android:layout_marginRight="@dimen/left_right_padding"
        android:layout_marginLeft="@dimen/margin_between_edit_text"
        android:background="@drawable/search"
        android:inputType="text"
        android:hint="@string/enter_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/emoji_edit_text"
        app:layout_constraintTop_toBottomOf="@+id/title_text" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/addButton"
        style="@style/ButtonText"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dialog_button_height"
        android:layout_marginLeft="@dimen/left_right_padding"
        android:layout_marginTop="@dimen/dialog_button_margin_top"
        android:layout_marginRight="@dimen/left_right_padding"
        android:layout_marginBottom="@dimen/margin_max"
        android:background="@drawable/button"
        android:text="@string/add"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name_edit_text" />

</androidx.constraintlayout.widget.ConstraintLayout>